src/components/Home/index.scss
@import '../../assets/variables/variables.scss';

.home-page {
  .text-zone {
    position: absolute;
    left: 10%;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
    max-height: 90%;
  }
  h1 {
    color: #fff;
    font-size: 53px;
    margin: 0;
    font-family: 'Helvetica, Coolvetica';
    font-weight: 400;

    &::before {
      content: '<h1>';
      font-family: 'La Belle Aurore';
      color: $primary-color;
      font-size: 18px;
      position: absolute;
      margin-top: -40px;
      opacity: 0.6;
    }

    &::after {
      content: '<h1/>';
      font-family: 'La Belle Aurore';
      color: $primary-color;
      font-size: 18px;
      position: absolute;
      animation: fadeIn 1s 1.7s backwards;
      opacity: 0.6;
      bottom: 105px;
      left: 0;
    }
    img {
      width: 52px;
      margin-left: 5px;
      margin-bottom: -5px;
      opacity: 0;
      height: auto;
      animation: rotateIn 1s linear both;
      animation-delay: 1.4s;
    }
  }

  h2 {
    color: #8d8d8d;
    margin-top: 70px;
    font-weight: 400;
    font-size: 11px;
    font-family: sans-serif;
    letter-spacing: 3px;
    animation: 1s 1.8s backwards;
  }

  .flat-button {
    color: $primary-color;
    font-size: 13px;
    font-weight: 400;
    letter-spacing: 4px;
    font-family: sans-serif;
    text-decoration: none;
    padding: 10px 18px;
    border: 1px solid $primary-color;
    margin-top: 25px;
    float: left;
    animation: fadeIn 1s 1.8s backwards;
    white-space: nowrap;

    &:hover {
      background-color: $primary-color;
      color: #333;
    }
  }
}

@media (min-width: 992px) {
  .home-page {
    .text-zone {
      width: 50%;
    }
  }
}

